--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,9 @@ on:
     branches: [ main ]
 
 env:
-  PYTHON_VERSION: '3.10'                             # Можно подправить под нужную версию
-  COSIGN_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}      # Ваш приватный Cosign-ключ
-  COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}    # Пароль к ключу (если нужен)
+  PYTHON_VERSION: '3.10'
+  COSIGN_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
+  COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
   SBOM_FILE: sbom.json
 
 jobs:
@@ -34,7 +34,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
 
-      - name: pre-commit hooks (black, ruff, isort, SPDX headers)
+      - name: Run pre-commit hooks (black, ruff, isort, SPDX headers)
         run: pre-commit run --all-files
 
       - name: ruff lint
@@ -52,7 +52,6 @@ jobs:
       - name: Run pytest with coverage
         run: |
           pytest --maxfail=1 --disable-warnings --cov=src --cov-report=xml --cov-report=html -q
-        continue-on-error: false
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v3
@@ -72,7 +71,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Syft
+      - name: Install Syft
         run: |
           curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
 
@@ -92,7 +91,6 @@ jobs:
       - name: Scan SBOM with Grype (fail on medium+)
         run: |
           grype sbom:${{ env.SBOM_FILE }} --fail-on medium
-        continue-on-error: false
 
       - name: Install Trivy
         run: |
@@ -101,7 +99,6 @@ jobs:
       - name: Scan SBOM with Trivy (fail on HIGH,CRITICAL)
         run: |
           trivy sbom ${SBOM_FILE} --severity HIGH,CRITICAL
-        continue-on-error: false
 
       - name: Upload vulnerability reports
         uses: actions/upload-artifact@v3
@@ -125,13 +122,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install reuse tool
-        run: |
-          pip install reuse
+        run: pip install reuse
 
       - name: Run reuse lint
-        run: |
-          reuse lint --ci
-        continue-on-error: false
+        run: reuse lint --ci
 
       - name: Upload REUSE report
         uses: actions/upload-artifact@v3
@@ -160,13 +154,12 @@ jobs:
           chmod +x /usr/local/bin/cosign
 
       - name: Import Cosign private key
-        # Приватный ключ должен быть заранее заклёчен в secrets.COSIGN_PRIVATE_KEY
         run: |
           mkdir -p ~/.cosign
           echo "${{ env.COSIGN_KEY }}" | base64 -d > ~/.cosign/cosign.key
           chmod 600 ~/.cosign/cosign.key
 
-      - name: Sign all artifacts in dist/ with Cosign
+      - name: Sign all artifacts in dist/
         run: |
           for f in dist/*; do
             cosign sign \
@@ -218,24 +211,3 @@ jobs:
         with:
           name: semgrep-report
           path: semgrep-report.sarif || true
-
-# ───────────────────────────────────────────────────────────────────────────────
-# Примечания:
-# - Параметры COSIGN_PRIVATE_KEY и COSIGN_PASSWORD должны быть добавлены в GitHub Secrets.
-# - После пуша в main (или PR) этот workflow:
-#   • отработает «линтеры → тесты»,
-#   • сгенерирует SBOM и просканирует его,
-#   • проверит REUSE-лицензии,
-#   • подпишет все пакеты в dist/, 
-#   • запустит CodeQL и Semgrep.
-# - Как только всё пройдёт без ошибок, можно считать, что мы закрыли:
-#     • «Continuous CVE scan» (Grype/Trivy),
-#     • «Cosign подпись артефактов»,
-#     • «REUSE-валидность лицензий»,
-#     • «CodeQL + Semgrep».
-# - В следующем шаге (после срабатывания этой пайплайн-пайплайн) можно:
-#   • добавить Vault/Vault-rotate (usage of Vault secrets для подписи, но уже будет базовая реализация Cosign),
-#   • настроить TPM-attestation внутри тpm_attestation.py и «trigger» его через CI,
-#   • внедрить inotify/watchdog в CI,
-#   • добавить автогенерацию доков (Sprig/TLA2C),
-#   • наконец, создать тег `v0.1-core-ready` и GitHub Release.
